# TDengine

cmake/: cmake.define  define.inc  taostools_CMakeLists.txt.in
docs/zh/: 01-index.md  02-intro.md
docs/zh/04-concept/: index.md
docs/zh/05-get-started/: 01-docker.md  03-package.md  index.md
docs/zh/07-develop/: 06-stream.md  07-tmq.mdx  08-cache.md  09-udf.md  index.md
docs/zh/08-connector/: 02-rest-api.mdx  05-schemaless-api.mdx  10-cpp.mdx  14-java.mdx  20-go.mdx  26-rust.mdx  30-python.mdx  35-node.mdx  40-csharp.mdx  45-php.mdx  index.md
docs/zh/10-deployment/: 01-deploy.md  03-k8s.md  05-helm.md  index.md
docs/zh/12-taos-sql/: 01-data-type.md  02-database.md  03-table.md  04-stable.md  05-insert.md  06-select.md  08-delete-data.mdx  10-function.md  12-distinguished.md  13-tmq.md  14-stream.md  16-operators.md  17-json.md  18-escape.md  19-limit.md  20-keywords.md  21-node.md  22-meta.md  23-perf.md  24-show.md  25-grant.md  26-udf.md  27-index.md  28-recovery.md  29-changes.md  index.md
docs/zh/14-reference/: 04-taosadapter.md  05-taosbenchmark.md  06-taosdump.md  08-taos-shell.md  12-directory.md  14-taosKeeper.md  index.md
docs/zh/17-operation/: 01-pkg-install.md  02-planning.mdx  03-tolerance.md  07-import.md  08-export.md  10-monitor.md  17-diagnose.md  index.md
include/common/: tmsg.h
include/os/: osMemory.h
include/util/: tlog.h  trbtree.h
packaging/cfg/: taos.cfg
source/libs/dindex/: CMakeLists.txt
source/libs/dindex/inc/: dIndex.h
source/libs/dindex/src/: dIndexMain.c
source/util/src/: tlog.c  (+1 more)
tests/parallel_test/: cases.task
(+128 files in other folders)
